# allocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  allocator_status.h  main.c
allocator/: allocator.c  allocator.h  allocator_internal.h
